--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rship-sample",
   "version": "0.0.1",
-  "description": "",
+  "description": "rShip koa, react, redux isomorphic sample",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,10 +9,9 @@
   "author": "Michael Chernobrov <me@mrsum.ru> (http://mrsum.ru)",
   "license": "ISC",
   "dependencies": {
-    "koa": "^1.2.4",
-    "notie": "^3.9.4",
-    "react": "15.2.0",
-    "react-dom": "15.2.0",
+    "koa": "^2.0.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
@@ -20,5 +19,33 @@
     "redux-logger": "^2.7.0",
     "redux-promise-middleware": "^4.1.0",
     "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.5.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.11.6",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.7.1",
+    "eslint-config-rambler": "^0.2.5",
+    "eslint-loader": "^1.5.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
+    "ignore-loader": "^0.1.1",
+    "isomorphic-style-loader": "^1.0.0",
+    "json-loader": "^0.5.4",
+    "memory-fs": "^0.3.0",
+    "postcss-loader": "^0.13.0",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
+    "url-loader": "^0.5.7"
   }
 }
