--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Michael Chernobrov <me@mrsum.ru> (http://mrsum.ru)",
   "license": "ISC",
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "koa": "^2.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -18,7 +19,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-promise-middleware": "^4.1.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
@@ -46,6 +48,7 @@
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.2"
   }
 }
