added keymirror and folder 'constants'

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
+    "keymirror": "^0.1.1",
     "koa": "^2.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
