--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "rShip koa, react, redux isomorphic sample",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tests": "$(npm bin)/jest"
   },
   "author": "Michael Chernobrov <me@mrsum.ru> (http://mrsum.ru)",
   "license": "ISC",
@@ -21,19 +21,21 @@
     "redux-logger": "^2.7.0",
     "redux-promise-middleware": "^4.1.0",
     "redux-thunk": "^2.1.0",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "babel-runtime": "^6.11.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
     "babel-core": "^6.17.0",
+    "babel-jest": "^16.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
-    "babel-runtime": "^6.11.6",
     "css-loader": "^0.25.0",
+    "enzyme": "^2.5.1",
     "eslint": "^3.7.1",
     "eslint-config-rambler": "^0.2.5",
     "eslint-loader": "^1.5.0",
@@ -42,10 +44,12 @@
     "html-webpack-plugin": "^2.22.0",
     "ignore-loader": "^0.1.1",
     "isomorphic-style-loader": "^1.0.0",
+    "jest": "^16.0.2",
     "json-loader": "^0.5.4",
     "memory-fs": "^0.3.0",
     "postcss-loader": "^0.13.0",
     "raw-loader": "^0.5.1",
+    "react-test-renderer": "^15.3.2",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
