--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "./node_modules/eslint-config-rambler/.eslintrc",
+  "extends": "rambler",
   "rules": {
     "react/sort-prop-types": 0
   }
