--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "rShip koa, react, redux isomorphic sample",
   "main": "index.js",
   "scripts": {
-    "tests": "$(npm bin)/jest"
+    "test": "$(npm bin)/jest"
   },
   "author": "Michael Chernobrov <me@mrsum.ru> (http://mrsum.ru)",
   "license": "ISC",
   "dependencies": {
-    "isomorphic-fetch": "^2.2.1",
-    "keymirror": "^0.1.1",
+    "axios": "^0.15.2",
+    "key-mirror": "^1.0.1",
     "koa": "^2.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -20,15 +20,16 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-promise-middleware": "^4.1.0",
-    "redux-thunk": "^2.1.0",
-    "whatwg-fetch": "^1.0.0",
-    "babel-runtime": "^6.11.6"
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.7.1",
     "autoprefixer": "^6.5.0",
+    "babel-runtime": "^6.11.6",
     "babel-core": "^6.17.0",
     "babel-jest": "^16.0.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
@@ -49,11 +50,34 @@
     "memory-fs": "^0.3.0",
     "postcss-loader": "^0.13.0",
     "raw-loader": "^0.5.1",
-    "react-test-renderer": "^15.3.2",
+    "react-addons-test-utils": "^15.3.2",
+    "redux-mock-store": "^1.2.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "jsx",
+      "js",
+      "json"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/FileStub.js",
+      "^.+\\.(css|styl)$": "<rootDir>/config/jest/CSSStub.js"
+    },
+    "setupFiles": [
+      "<rootDir>/config/jest/GlobalMocks.js"
+    ],
+    "preprocessorIgnorePatterns": [
+      "node_modules/(?!react-native|tcomb-form-native|apsl-react-native-button|react|realm|whatwg-fetch)"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/(build|docs|node_modules)/"
+    ],
+    "testEnvironment": "node",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|jsx)$"
   }
 }
