--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "rShip koa, react, redux isomorphic sample",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "$(npm bin)/eslint ."
   },
   "author": "Michael Chernobrov <me@mrsum.ru> (http://mrsum.ru)",
   "license": "ISC",
