--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "rShip koa, react, redux isomorphic sample",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "$(npm bin)/eslint ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Chernobrov <me@mrsum.ru> (http://mrsum.ru)",
   "license": "ISC",
