--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.7.1",
     "autoprefixer": "^6.5.0",
-    "babel-runtime": "^6.11.6",
+    "axios-mock-adapter": "^1.7.1",
     "babel-core": "^6.17.0",
     "babel-jest": "^16.0.0",
     "babel-loader": "^6.2.5",
@@ -35,6 +34,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.11.6",
     "css-loader": "^0.25.0",
     "enzyme": "^2.5.1",
     "eslint": "^3.7.1",
@@ -51,6 +51,7 @@
     "postcss-loader": "^0.13.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.3.2",
+    "react-hot-loader": "1.3.0",
     "redux-mock-store": "^1.2.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
