--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint": "3.7.1",
     "eslint-config-rambler": "0.2.5",
     "eslint-loader": "1.5.0",
-    "extract-text-webpack-plugin": "1.0.1",
+    "extract-text-webpack-plugin": "2.0.0-rc.2",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.22.0",
     "ignore-loader": "0.1.1",
@@ -58,8 +58,8 @@
     "stylus": "0.54.5",
     "stylus-loader": "2.3.1",
     "url-loader": "0.5.7",
-    "webpack": "2.1.0-beta.27",
-    "webpack-dev-server": "2.1.0-beta.12"
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.2.1"
   },
   "jest": {
     "moduleFileExtensions": [
