--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "3.6.0",
     "redux-logger": "2.7.0",
     "redux-promise-middleware": "4.1.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "serialize-javascript": "1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "6.5.0",
